Working on this again and fixed some isssues with the typing words being cropped and movign to another line.

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -196,10 +196,9 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 45px;
-    margin: 0 30px;
+    margin: 10px 30px;
     padding: 45px 0 0 0;
     height: 140px;
-    font-family: 'Open Sans', Arial, sans-serif;
     text-shadow: 
         0 0 1px #fff, 
         0 1px 2px rgba(0,0,0,0.3);
@@ -209,7 +208,7 @@ body {
     color: #fff;
     padding: 20px 5px;
     font-style: italic;
-    margin: 0 30px;
+    margin: 20px 30px;
     font-size: 30px;
     border-top: 1px solid rgba(255,255,255,0.5);
     opacity: 0;
@@ -225,7 +224,6 @@ body {
     font-size: 9px;
     letter-spacing: 1px;
     padding-top: 4px;
-    font-family: 'Open Sans', Arial, sans-serif;
 }
 
 .ch-info p a:hover {
@@ -256,26 +254,19 @@ body {
 .cd-intro {
   width: 90%;
   text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .cd-intro {
   margin: 4em auto;
-}
-@media only screen and (min-width: 768px) {
-  .cd-intro {
-    margin: 5em auto;
-  }
-}
-@media only screen and (min-width: 1170px) {
-  .cd-intro {
-    margin: 6em auto;
-  }
 }
 
 .cd-headline {
   font-size: 3rem;
   line-height: 1.2;
 }
+
 @media only screen and (min-width: 768px) {
   .cd-headline {
     font-size: 4.4rem;
